--- a/src/main/resources/org/example/primary.fxml
+++ b/src/main/resources/org/example/primary.fxml
@@ -17,7 +17,7 @@
     <BorderPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
                 AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <top>
-            <TextField fx:id="outputTF" alignment="CENTER_RIGHT" prefHeight="56.0" prefWidth="335.0" promptText="0">
+            <TextField fx:id="outputTF" prefHeight="56.0" prefWidth="335.0" promptText="0">
                 <font>
                     <Font size="19.0"/>
                 </font>
@@ -37,6 +37,7 @@
                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                    <RowConstraints/>
                 </rowConstraints>
                 <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false"
                         onAction="#onNumberOperatorClick" text="7"/>
@@ -61,20 +62,24 @@
                 <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false"
                         onAction="#onNumberOperatorClick" text="-" GridPane.columnIndex="3" GridPane.rowIndex="2"/>
                 <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false"
-                        onAction="#onCClick" text="C" GridPane.columnIndex="3" GridPane.columnSpan="2"/>
+                        onAction="#onCClick" text="C" GridPane.columnIndex="4"/>
                 <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false"
                         onAction="#onNumberOperatorClick" text="/" GridPane.columnIndex="4" GridPane.rowIndex="1"/>
                 <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false"
-                        onAction="#onEqualClick" text="=" GridPane.columnIndex="4" GridPane.rowIndex="2"
+                        onAction="#onEqualClick" text="=" GridPane.columnIndex="4" GridPane.rowIndex="3"
                         GridPane.rowSpan="2"/>
                 <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false"
                         onAction="#onNumberOperatorClick" text="." GridPane.rowIndex="3"/>
                 <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false"
                         onAction="#onNumberOperatorClick" text="0" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
                 <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false"
-                        onAction="#onDELClick" text="DEL" GridPane.columnIndex="2" GridPane.rowIndex="3"/>
+                        onAction="#onDELClick" text="DEL" GridPane.columnIndex="3"/>
                 <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false"
-                        onAction="#onNumberOperatorClick" text="+" GridPane.columnIndex="3" GridPane.rowIndex="3"/>
+                        onAction="#onNumberOperatorClick" text="+" GridPane.columnIndex="4" GridPane.rowIndex="2"/>
+                <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false"
+                        onAction="#onNumberOperatorClick" text="(" GridPane.columnIndex="2" GridPane.rowIndex="3"/>
+                <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false"
+                        onAction="#onNumberOperatorClick" text=")" GridPane.columnIndex="3" GridPane.rowIndex="3"/>
             </GridPane>
         </center>
     </BorderPane>
